# super-kaizen-overloaded

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: enemy_db.json  ship1.glb
assets/bgm/: 436507__doctor-dreamchip__2018-08-02.url  621165__bainmack__rock-song-short16.url
crates/bevy_atmosphere/: Cargo.toml
crates/bevy_atmosphere/src/: lib.rs
src/: debug.rs  enemy.rs  game.rs  main.rs  menu.rs
