[package]
name = "super-kaizen-overloaded"
version = "0.1.0"
authors = ["Jerome Humbert <djeedai@gmail.com>"]
edition = "2021"
resolver = "2"
description = ""
keywords = ["game", "gamedev", "bevy", "shmup", "shoot'em up"]
license = "MIT OR Apache-2.0"

[dependencies]
# Bevy
bevy = { version = "0.7", default-features = false, features = ["render", "bevy_winit", "png", "bevy_gltf"] }
bevy_tweening = "0.4"
bevy_kira_audio = { version = "0.10", features = ["wav"] }
bevy_atmosphere = "0.3.1"
#bevy_atmosphere = { path = "crates/bevy_atmosphere" }
leafwing-input-manager = "0.3"
heron = { version = "3.0", features = ["2d", "debug-2d"] }

# Others
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.4"
parking_lot = "0.11"
rand = "0.8"

# In-game dev/debug
bevy-inspector-egui = "0.11"
bevy_prototype_debug_lines = "0.7"
